[package]
name = "dpdk-project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
clap = "4.1.6"
etherparse = "0.13.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_pcg = "0.3.1"

[build-dependencies]
cbindgen = "0.24.3"
